<resources>
    <string name="app_name">Bill For Meal</string>
    <string name="app_title">Split The Bill</string>
    <string name="amount_label">Amount</string>
    <string name="amount">0.00</string>
    <string name="party_label">Party Size</string>
    <string name="party">1</string>
    <string name="unhappy_tip">10%</string>
    <string name="ok_tip">15%</string>
    <string name="happy_tip">18%</string>
    <string name="total_label">Total Per Person</string>
    <string name="total_num_label">$0.00</string>
</resources>
